--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -1,9 +1,5 @@
-_target_: pytorch_lightning.Trainer
-logger:
-  _target_: pytorch_lightning.loggers.WandbLogger
-  project: moma
-  save_dir: /home/alanzluo/log
-gpus: [0, 1]
-strategy: ddp
-replace_sampler_ddp: False
-max_epochs: 200
+name: ${data.level}_${model.backbone}_${model.strategy}
+dir_wandb: ${root}/log
+dir_ckpt: ${root}/data/weights/ckpt/${trainer.name}
+gpus: [0, 1, 2, 3, 4, 5, 6, 7]
+max_epochs: ${model.max_epochs}
