--- a/configs/data/backbone/mvit.yaml
+++ b/configs/data/backbone/mvit.yaml
@@ -4,8 +4,56 @@ T: 16
 tau: 4
 transform:
   train:
-    size_scale: [256, 320]
-    size_crop: 224
+  - _target_: data.transforms.RepeatandConverttoList
+    repeat_num: 2
+  - _target_: data.transforms.ApplyTransformToKeyOnList
+    key: video
+    transform:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        - _target_: pytorchvideo.transforms.UniformTemporalSubsample
+          num_samples: 16
+        - _target_: pytorchvideo.transforms.Div255
+        - _target_: pytorchvideo.transforms.Permute
+          dims: [1,0,2,3]
+        - _target_: pytorchvideo.transforms.rand_augment.RandAugment
+          magnitude: 7
+          num_layers: 4
+        - _target_: pytorchvideo.transforms.Permute
+          dims: [1,0,2,3]
+        - _target_: pytorchvideo.transforms.Normalize
+          mean: [0.45, 0.45, 0.45]
+          std: [0.225, 0.225, 0.225]
+        - _target_: pytorchvideo.transforms.RandomResizedCrop
+          target_height: 224
+          target_width: 224
+          scale: [0.08, 1.0]
+          aspect_ratio: [0.75, 1.3333]
+        - _target_: torchvision.transforms.RandomHorizontalFlip
+          p: 0.5
+        - _target_: pytorchvideo.transforms.Permute
+          dims: [1,0,2,3]
+        - _target_: pytorchvideo_trainer.datamodule.rand_erase_transform.RandomErasing
+          probability: 0.25
+          mode: 'pixel'
+          max_count: 1
+          num_splits: 1
+          device: 'cpu'
+        - _target_: pytorchvideo.transforms.Permute
+          dims: [1,0,2,3]
   val:
-    size_scale: 256
-    size_crop: 256
+    _target_: pytorchvideo.transforms.ApplyTransformToKey
+    key: video
+    transform:
+      _target_: torchvision.transforms.Compose
+      transforms:
+        - _target_: pytorchvideo.transforms.UniformTemporalSubsample
+          num_samples: 16
+        - _target_: pytorchvideo.transforms.Div255
+        - _target_: pytorchvideo.transforms.Normalize
+          mean: [0.45, 0.45, 0.45]
+          std: [0.225, 0.225, 0.225]
+        - _target_: pytorchvideo.transforms.ShortSideScale
+          size: 224
+        - _target_: torchvision.transforms.CenterCrop
+          size: 224
