--- a/configs/model/strategy/fromscratch.yaml
+++ b/configs/model/strategy/fromscratch.yaml
@@ -3,6 +3,5 @@ strategy: fromscratch
 lr: 0.1
 momentum: 0.9
 wd: 1e-4
-warmup_epochs: 2
-warmup_start_lr: 0.0001
-max_epochs: 30
+warmup_steps: 500
+num_epochs: 30
