--- a/configs/model/backbone/mvit.yaml
+++ b/configs/model/backbone/mvit.yaml
@@ -2,6 +2,7 @@ backbone: mvit
 name_pretrain: MVIT_B_16x4.pyth
 module:
   # Reference: https://github.com/facebookresearch/pytorchvideo/blob/main/pytorchvideo_trainer/pytorchvideo_trainer/conf/module/model/mvit_base_16x4.yaml
+#  _target_: pytorchvideo.models.vision_transformers.create_multiscale_vision_transformers
   _target_: pytorchvideo.models.vision_transformers.create_multiscale_vision_transformers
   spatial_size: 224
   temporal_size: 16
@@ -22,7 +23,7 @@ module:
   qkv_bias: True
   dropout_rate_block: 0.0
   droppath_rate_block: 0.2
-  pooling_mode: "conv"
+  pooling_mode: 'conv'
   pool_first: False
   embed_dim_mul: [[1, 2.0], [3, 2.0], [14, 2.0]]
   atten_head_mul: [[1, 2.0], [3, 2.0], [14, 2.0]]
