--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -2,4 +2,4 @@ name: ${data.level}_${model.backbone}_${model.strategy}
 dir_wandb: ${root}/log
 dir_ckpt: ${root}/data/weights/ckpt/${trainer.name}
 gpus: [0, 1, 2, 3, 4, 5, 6, 7]
-max_epochs: ${model.max_epochs}
+num_epochs: ${model.num_epochs}
