--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -1,4 +1,4 @@
-name: ${data.level}_${model.backbone}_${model.strategy}
+name: ${data.level}_${model.backbone}_${model.strategy}_2
 dir_wandb: ${root}/log
 dir_ckpt: ${root}/data/weights/ckpt/${trainer.name}
 gpus: [0, 1, 2, 3, 4, 5, 6, 7]
