--- a/configs/config.yaml
+++ b/configs/config.yaml
@@ -6,12 +6,10 @@ level: both
 backbone: mvit
 strategy: finetune
 
-#gpus: [0, 1, 2, 3, 4, 5, 6, 7]
-gpus: [0]
+gpus: [0, 1, 2, 3, 4, 5, 6, 7]
 num_workers: 3
 
-#batch_size: 64
-batch_size: 2
+batch_size: 64
 fps: 30
 lr: 0.03
 momentum: 0.9
