--- a/configs/slowfast.yaml
+++ b/configs/slowfast.yaml
@@ -6,7 +6,7 @@ levels: [act, sact]
 net: slowfast
 optimizer: adamw
 mode: finetune
-few_shot: False
+paradigm: few-shot
 weight: pretrain
 
 gpus: [0, 1, 2, 3, 4, 5, 6, 7]
